@@ -12,6 +12,7 @@
 #ifndef GRAPH_H_
 #define GRAPH_H_
 
+#include "grconfig.h"
 #include "grevents.h"
 
  /*************************************************************************/
